linux-2.6 (2.6.24-5) UNRELEASED; urgency=low

  * [arm] Enable asix driver (USB_NET_AX8817X).
  * [arm] Enable CONFIG_USB_CATC, CONFIG_USB_KAWETH, CONFIG_USB_PEGASUS,
          and CONFIG_USB_RTL8150.

 -- Gordon Farquharson <gordonfarquharson@gmail.com>  Thu, 21 Feb 2008 21:00:48 -0700

linux-2.6 (2.6.24-4) unstable; urgency=low

  * Add stable release 2.6.24.1:
    - splice: missing user pointer access verification (CVE-2008-0009/10)
    - drm: the drm really should call pci_set_master..
    - Driver core: Revert "Fix Firmware class name collision"
    - fix writev regression: pan hanging unkillable and un-straceable
    - sched: fix high wake up latencies with FAIR_USER_SCHED
    - sched: let +nice tasks have smaller impact
    - b43: Reject new firmware early
    - selinux: fix labeling of /proc/net inodes
    - b43legacy: fix DMA slot resource leakage
    - b43legacy: drop packets we are not able to encrypt
    - b43legacy: fix suspend/resume
    - b43legacy: fix PIO crash
    - b43: Fix dma-slot resource leakage
    - b43: Drop packets we are not able to encrypt
    - b43: Fix suspend/resume
    - sky2: fix for WOL on some devices
    - sky2: restore multicast addresses after recovery
    - x86: restore correct module name for apm
    - ACPI: update ACPI blacklist
    - PCI: Fix fakephp deadlock
    - sys_remap_file_pages: fix ->vm_file accounting
    - lockdep: annotate epoll
    - forcedeth: mac address mcp77/79
    - USB: Fix usb_serial_driver structure for Kobil cardreader driver.
    - USB: handle idVendor of 0x0000
    - USB: fix usbtest halt check on big endian systems
    - USB: storage: Add unusual_dev for HP r707
    - USB: Variant of the Dell Wireless 5520 driver
    - USB: use GFP_NOIO in reset path
    - USB: ftdi driver - add support for optical probe device
    - USB: pl2303: add support for RATOC REX-USB60F
    - USB: remove duplicate entry in Option driver and Pl2303 driver for Huawei modem