@@ -22,6 +22,7 @@ modules: false
 [s390-tape_image]
 desc: This kernel has support to IPL (boot) from a tape.
 initramfs: false
+override-localversion: s390
 type: plain-s390-tape
 
 [s390x_base]
