@@ -1,8 +1,12 @@
 linux-2.6 (2.6.24-5) UNRELEASED; urgency=low
 
+  [ Gordon Farquharson ]
   * [arm] Enable asix driver (USB_NET_AX8817X).
   * [arm] Enable CONFIG_USB_CATC, CONFIG_USB_KAWETH, CONFIG_USB_PEGASUS,
           and CONFIG_USB_RTL8150.
+
+  [ Bastian Blank ]
+  * [s390/s390-tape]: Override localversion correctly.
 
  -- Gordon Farquharson <gordonfarquharson@gmail.com>  Thu, 21 Feb 2008 21:00:48 -0700
 
